[package]
name = "my-better-bk"
version = "0.1.0"
description = "MyBetterBK is a terminal-based course scheduler for HCMUT (Bách Khoa) students who prefer efficiency over endless loading screens. I took the logic of course arrangement and wrapped it in a lightning-fast Rust TUI. Stop fighting the DOM. Embrace the terminal."
authors = ["Dinh Duc Trung <dinhductrung0706@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
semver = "1.0.24"
dotenvy = "0.15.7"
thirtyfour = "0.36.1"
chrome-driver-rs = "0.1.3"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
